[package]
name = "seran"
version = "0.1.0"
authors = ["Joshua Benuck <joshua_benuck@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

# Uses rust to set the permissions on the deno executable
rust-perms = []

# Rewrite urls and use a remotely hosted version of seran-wiki
# This is broken and likely a non-workable approach
rewrite-urls = []

[dependencies.reqwest]
version = "0.10.6"
features = ["stream"]

[dependencies]
clap = "2.33.1"
dirs = "2.0.2"
url = "2.1.1"
anyhow = "1.0.31"
futures = "0.3.5"
tokio = "0.2.21"
tokio-io = "0.1.13"
zip = "0.5.5"
log = "0.4.8"
